# LetCompileFly

./: .gitignore  CMakeLists.txt  README.md  Symboltable.h  main.cpp  t.lcf  test.lcf
QTdata/: QT.txt  QT1.txt  QT2.txt
src/: DAG.cpp  DAG.h  ENTITY.cpp  ENTITY.h  GenerateQT.cpp  GenerateQT.h  Quaternary.cpp  Quaternary.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  Tools.cpp  Tools.h  main.cpp
src/LexicalAnalysis/: AutomatonLA.cpp  AutomatonLA.h  Identifier.cpp  Identifier.h  LexicalTokenAnalysis.cpp  LexicalTokenAnalysis.h  TransFunc.cpp  TransFunc.h
src/ObjectCodeGeneration/: Code.ASM  ObjectCode.cpp  ObjectCode.h
src/SyntacticTranslate/: ArithmeticExpression.cpp  ArithmeticExpression.h  AssignExpression.cpp  AssignExpression.h  BranchLoopStatement.cpp  BranchLoopStatement.h  BranchStatement.cpp  BranchStatement.h  CompareExpression.cpp  CompareExpression.h  DefinitionGenerate.cpp  DefinitionGenerate.h  ExpressionAssign.cpp  ExpressionAssign.h  LogicExpression.cpp  LogicExpression.h  ProcedureDeclare.cpp  ProcedureDeclare.h  ReportingError.cpp  ReportingError.h  SingleStatement.cpp  SingleStatement.h  VariableDeclare.cpp  VariableDeclare.h
